--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -27,7 +27,8 @@
 }
 //----------------------------------------------------------
 .content {
-//     transform: scale(0.82);
+    margin-top:40px;
+    transform: scale(0.92);
     display: flex;
     flex-direction: column;
     align-items: center;
