--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,9 +14,7 @@ a {
     color: rgba(90, 90, 90, 0.9);
 
     &.active {
-        color: #1f31b5;
-        // color: rgba(0, 140, 210, 0.8);
-        // #3f51b5;
+        color: #3f51b5;
     }
 }
 
@@ -24,9 +22,9 @@ a {
 .titleProd {
     color: #3f51b5;
     text-align: center;
-    font-size: large;
+    font-size: x-large;
     font-family: 'Milonga';
-    font-weight: 400;
+    font-weight: 800;
 }
 
 //----------------------------------------------------------------
@@ -36,17 +34,17 @@ a {
     left: 0;
     right: 0;
     width: 100%;
-    height: 50px;
+    height: 45px;
     display: flex;
     align-items: center;
     background-color: black;
     color: white;
     font-weight: 400;
-    font-size: larger;
+    font-size: large;
     padding: 10px;
-    padding-left: 30%;
+    padding-left: 27%;
     font-family: 'Milonga';
-    box-shadow: 1px 1px 4px 2px rgba(10, 10, 10, 0.3);
+//     box-shadow: 1px 1px 2px 1px rgba(50, 10, 10, 0.6);
 }
 
 //---------------------------------------------------------------
@@ -79,15 +77,15 @@ svg.material-icons {
 
 //---------------------------------------------------
 #numberProd {
-    transform: scale(0.7);
+//     transform: scale(0.7);
     margin-left: 18%;
     border-radius: 40%;
     padding: 1px 4px;
-    color: rgb(15, 130, 232);
-    background-color: white;
+    color: rgba(30, 160, 250,0.9);
+    background-color: rgba(250,250,250,0.7);
     font-family: 'Milonga';
-    font-weight: 400px;
-    font-size: small;
+    font-weight: 700px;
+//     font-size: small;
 }
 
 //----------------------------------------------------------
