--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -21,6 +21,7 @@
     text-align: center;
     text-justify: newspaper;
     border-style: outset;
+  color : orange;
     box-shadow: 1px 1px 1px 1px rgba(90,60,50,0.8);
     margin: 15px;
     padding: 15px;
