--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -28,6 +28,7 @@
 }
 //----------------------------------------------------------
 .content {
+  background-color: black;
     margin-top:40px;
     transform: scale(0.92);
     display: flex;
