--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -14,6 +14,7 @@
 }
 //-------------------------------------------------------------------
 .title {
+   background-color: white;
     font-family: 'Milonga';
     font-weight: 750;
     font-size: xx-large;
@@ -58,7 +59,7 @@
 .prods {
     // transform :scale(0.8);
     border: 2px solid #0000;
-    // background-color: #f4fafa;
+    background-color: white;
     height: max-content;
     margin: 20px;
     justify-content: center;
