--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -14,7 +14,7 @@
 }
 //-------------------------------------------------------------------
 .title {
-   background-color: white;
+//    background-color: white;
     font-family: 'Milonga';
     font-weight: 750;
     font-size: xx-large;
