--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -73,6 +73,7 @@
     text-align: center;
     text-justify: newspaper;
     border-style: outset;
+  min-width: 600px;
 }
 // -----------------------------------------------------------
 .prods:hover {
