--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -26,6 +26,7 @@
     box-shadow: 1px 1px 1px 1px rgba(90,60,50,0.8);
     margin: 15px;
     padding: 15px;
+  min-width : 700px;
 }
 //----------------------------------------------------------
 .content {
