--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -15,6 +15,7 @@
 //-------------------------------------------------------------------
 .title {
 //    background-color: white;
+  color: white;
     font-family: 'Milonga';
     font-weight: 750;
     font-size: xx-large;
