--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -82,11 +82,12 @@ svg.material-icons {
     margin-left: 18%;
     border-radius: 40%;
     padding: 1px 4px;
-    color: rgba(30, 160, 250,0.9);
-    background-color: rgba(250,250,250,0.7);
+    color: rgba(255, 200, 55,1);
+    text-shadow: 1px 1px rgba(0,0,0,1);
+    background-color: rgba(255,255,255,0.04);
     font-family: 'Milonga';
     font-weight: 700px;
-//     font-size: small;
+    font-size: xx-large;
 }
 
 //----------------------------------------------------------
