--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -26,9 +26,10 @@
 }
 //----------------------------------------------------------
 .content {
+   min-width : 1200px;
   background-color: black;
     margin-top:40px;
-    transform: scale(0.92);
+    transform: scale(0.95);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -70,7 +71,8 @@
     text-align: center;
     text-justify: newspaper;
     border-style: outset;
-  min-width: 700px;
+  min-width: 900px;
+  width : 1100px;
 }
 // -----------------------------------------------------------
 .prods:hover {
