--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,12 +10,12 @@
 //============================================================
 a {
     text-decoration: none;
-
+     text-shadow: 1px 1px rgba(0,0,0,1);
     color: rgba(100, 100, 100, 1);
 
     &.active {
-        color: rgba(190,100,200,0.95);
-//           #3f51b5;
+       color: rgba(255, 200, 55,1);
+    text-shadow: 1px 1px rgba(0,0,0,1);
     }
 }
 
