--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -3,7 +3,7 @@
     <ol >
     <h1 class = 'title price'> Final Price = {{myCart.finalPrice}} $
     </h1> 
-    <h2 class = 'title amount'> Finall Amount = {{myCart.finalAmount}}</h2>
+<!--     <h2 class = 'title amount'> Finall Amount = {{myCart.finalAmount}}</h2> -->
 
 
     <li *ngFor="let it of myCart.items" class="prods">
