--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -22,7 +22,7 @@
     box-shadow: 1px 1px 1px 1px rgba(90,160,150,1);
     margin: 15px;
     padding: 15px;
-  margin-top: 50px;
+  margin-top: 90px;
  
   min-width : 1000px;
 }
@@ -30,7 +30,7 @@
 .content {
    min-width : 1200px;
   background-color: black;
-    margin-top:0px;
+    margin:0px;
     transform: scale(0.95);
     display: flex;
     flex-direction: column;
