--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -29,9 +29,9 @@
 //----------------------------------------------------------
 .content {
    min-width : 1200px;
-  background-color: black;
+  background-color: rgba(0,0,0,0.9);
     margin:0px;
-    transform: scale(0.95);
+//     transform: scale(0.95);
     display: flex;
     flex-direction: column;
     align-items: center;
