--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -95,7 +95,7 @@
 }
 //-----------------------------------------------------------------------
 .del {
-    background-color: rgba(240,60, 200, 0.9);
+    background-color: rgba(180,0,60, 0.9);
     color: white;
 }
 //======================================================================
@@ -105,7 +105,7 @@ a{
 }
 //-----------------------------------------------------------------
 .add {
-    background-color: rgb(80, 250, 190);
+    background-color: rgb(0,180,100);
     color: white;
 }
 //==================================================================
