--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -22,8 +22,8 @@
     box-shadow: 1px 1px 1px 1px rgba(90,160,150,1);
     margin: 15px;
     padding: 15px;
-  margin-top: 90px;
- 
+  margin-top: 120px;
+ paddint-top:20px;
   min-width : 1000px;
 }
 //----------------------------------------------------------
