--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -124,7 +124,7 @@ svg.material-icons {
 
 //-----------------------------------------------------------------------
 .del {
-   background-color: rgba(200,0,100, 0.9);
+   background-color: rgba(250,0,70,1);
 //     background-color: rgba(200, 50, 200, 1);
     // rgba(210, 0, 150, 0.7);
     // background-color: rgba(250, 30, 150, 0.9);
@@ -139,7 +139,7 @@ a {
 
 //-----------------------------------------------------------------
 .add {
-    background-color: rgb(0,200,100);
+    background-color: rgb(0,250,70);
     // color:#3f51b5;
     color: white;
 }
