--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -109,7 +109,7 @@ a{
 }
 //==================================================================
 .price {
-    margin-top: 20px;
+//     margin-top: 20px;
     margin-bottom: 10px;
     padding: 30px;
 }
