--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,7 +14,7 @@ a {
      color: rgba(120, 120, 120, 1);
 
     &.active {
-      color: rgba(255, 180,0,1);
+      color: rgba(255,240,0,1);
      }
 }
 
