--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -94,7 +94,8 @@
 }
 //-----------------------------------------------------------------------
 .del {
-    background-color: rgba(180,0,60, 0.9);
+   background-color: rgba(250,0,70,1);
+//     background-color: rgba(180,0,60, 0.9);
     color: white;
 }
 //======================================================================
@@ -104,7 +105,8 @@ a{
 }
 //-----------------------------------------------------------------
 .add {
-    background-color: rgb(0,180,100);
+   background-color: rgba(0,250,70,1);
+//     background-color: rgb(0,180,100);
     color: white;
 }
 //==================================================================
