--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -9,7 +9,7 @@
     <li *ngFor="let it of myCart.items" class="prods">
       <div class="prod">
         <h1 id='titleProd'> {{it.title}} 
-          <button (click)="removeFromCart(it)" class="material-icons" id="dell">cancel</button>
+          <button (click)="removeFromCart(it)" class="material-icons" id="cancel">cancel</button>
         </h1>
         <p class='price'>
           <span> price per one  : {{ it.price}} $ </span>
