--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -42,17 +42,13 @@
     color: #38d9a9;
 }
 //=============================================================
-#dell {
+#cancel {
     background-color: rgba(0, 0, 0, 0);
     border: 0px;
     color: black;
-    margin-left: 30px;
-    padding-right:2px;
-    padding-left:5px;
-    align-content:right;
-    align-text:right;
-    float:right  ;
-//     margin-right: 5px;
+    position: absolute;
+    top: 4px;
+    right: 16px;
 }
 //================================================================
 .prods {
