--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -47,8 +47,8 @@
     border: 0px;
     color: black;
     position: absolute;
-    margin-top: 4px;
-    margin-right: 16px;
+  margin-left:100px;
+    margin-right: 10px;
 }
 //================================================================
 .prods {
