--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -47,11 +47,12 @@
     border: 0px;
     color: black;
     position: absolute;
-  margin-left:100px;
+//   margin-left:100px;
     margin-right: 10px;
 }
 //================================================================
 .prods {
+   position: relative;
     // transform :scale(0.8);
     border: 2px solid #0000;
     background-color: white;
