--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -28,7 +28,8 @@
 //----------------------------------------------------------
 .content {
    min-width : 1200px;
-  background-color: rgba(80,0,100,0.7);
+  background-color:  rgba(70, 90, 230, 0.3);
+//     rgba(80,0,100,0.7);
     margin:0px;
 //     transform: scale(0.95);
     display: flex;
