--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -27,7 +27,7 @@
    background: linear-gradient(to left,
        #FDD5B1 0%,
           #CEC8EF 30%,
-          #FFCFF170%);
+          #FFCFF1 70%);
   
 //   background-color:  rgba(70, 90, 230, 0.3);
 //     rgba(80,0,100,0.7);
