--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -24,10 +24,10 @@
 //----------------------------------------------------------
 .content {
    min-width : 1200px;
-   background: linear-gradient(to left,
-       #FDD5B1 0%,
-          #CEC8EF 30%,
-          #FFCFF1 70%);
+  background: linear-gradient(to left,
+        rgba(0, 0, 50, 0.2) 0%,
+          rgba(200, 200, 200, 0.2) 30%,
+          rgba(0, 0, 50, 0.2) 70%);
   
 //   background-color:  rgba(70, 90, 230, 0.3);
 //     rgba(80,0,100,0.7);
