--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,7 +14,9 @@ a {
      color: rgba(120, 120, 120, 1);
 
     &.active {
-      color: rgba(255,230,0,1);
+      color:'#3dc2ff';
+//      '#5260ff',  
+//   '#ffc409',
      }
 }
 
