--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,9 +14,7 @@ a {
      color: rgba(120, 120, 120, 1);
 
     &.active {
-      color:'#3dc2ff';
-//      '#5260ff',  
-//   '#ffc409',
+      color:'#ffc409';
      }
 }
 
