--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -81,7 +81,7 @@ svg.material-icons {
     margin-left: 18%;
     border-radius: 40%;
     padding: 1px 4px;
-    color: rgba(255, 230,0,1);
+    color: #5260ff;
     text-shadow: 1px 1px rgba(0,0,0,1);
     background-color: rgba(255,255,255,0.04);
     font-family: 'Milonga';
