--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -41,7 +41,7 @@
 }
 //==============================================================
 .deleteIcon {
-    color: #38d9a9;
+    color: #eb445a;//#38d9a9;
 }
 //=============================================================
 #cancel {
@@ -104,7 +104,7 @@ a{
 }
 //-----------------------------------------------------------------
 .add {
-   background-color: rgba(0,250,70,1);
+   background-color: #2dd36f;//rgba(0,250,70,1);
 //     background-color: rgb(0,180,100);
     color: white;
 }
