--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -8,6 +8,14 @@
     margin: 10px;
     padding: 10px;
 }
+
+
+.swal2-popup {
+  font-size: 1.6rem !important;
+  font-family: Georgia, serif;
+}
+
+
 //-------------------------------------------------------------------
 .title {
     font-family: 'Milonga';
