--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -10,6 +10,11 @@
 }
 
 
+.swal2-title {
+  font-family:'Montserrat', sans-serif;
+}
+
+
 .swal2-popup {
   font-size: 1.6rem !important;
   font-family: Georgia, serif;
