--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Milonga');
+
 #titleProd {
     font-family: 'Milonga';
     font-weight: 650;
@@ -9,7 +11,11 @@
     padding: 10px;
 }
 
-
+.format-pre pre {
+  padding: 10px;
+  font-size: 14px;
+   font-family: 'Milonga';
+}
 .swal2-title {
   font-family:'Montserrat', sans-serif;
 }
