--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -10,6 +10,11 @@
     margin: 10px;
     padding: 10px;
 }
+pre {
+  padding: 10px;
+  font-size: 14px;
+   font-family: 'Milonga';
+}
 
 .format-pre pre {
   padding: 10px;
